# japanese_read

./: Cargo.toml  LICENSE  README.md
japanese_texts/hiragana/: hana_and_ohisama.txt  momotaro.txt  princess_kaguya.txt
japanese_texts/kanji/: momotaro.txt
japanese_texts/katakana/: momotaro.txt  princess_kaguya.txt
src/: lib.rs  main.rs
