[package]
name = "japanese_read"
version = "0.1.0"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wana_kana = "2.0.1"
termion = "1.5.6"
differ = "1.0.1"
rand = "0.8.3"
rust-embed = "5.9.0"
